--- a/src/css/sass/adaptive.scss
+++ b/src/css/sass/adaptive.scss
@@ -292,6 +292,10 @@
         margin: 0 0 0 auto;
     }
 
+    .edit_form {
+        padding: 25px;
+    }
+
     /*START PAGE*/
     /*FORM QUIZ*/
     /*RESUL*/
