--- a/src/css/sass/_variables.scss
+++ b/src/css/sass/_variables.scss
@@ -1,6 +1,6 @@
 /* variables */
 :root {
-	--primary: #41b2ad;
+	--primary: #d13980;
 	--secondary: #fff;
 	--success: #3bad4b;
 	--info: #66c0da;
@@ -8,16 +8,15 @@
 	--danger: #f86c6b;
 	--dark: #333333;
 	--grey: #e3e3e3;
-
-	--site-bg: #ffd699;
+	--site-bg: #1e1e3e;
 	--site-bg-contrast: #ffffff;
-	--text-color: #333333;
+	--text-color: #2e2e54;
 	--text-color-light: #69748c;
 	--text-color-contrast: #ffff;
-	--link-color: #41b2ad;
-	--link-color-active: #14eede;
+	--link-color: #d13980;
+	--link-color-active: #bc3373;
 	--border-color: #d2d4d8;
 	--border-color-active: rgba(102,192,218,.8);
-	--btn-bg: #41b2ad;
+	--btn-bg: #d13980;
 	--btn-text: #ffffff;
 }
