--- a/src/css/sass/components/_edit-quiz.scss
+++ b/src/css/sass/components/_edit-quiz.scss
@@ -131,7 +131,10 @@
 .allow_input-box {
     display: flex;
     position: relative;
-    margin-bottom: 5px;
+}
+
+.form_row .allow_input-box {
+    margin-top: 11px;
 }
 
 .allow_input-box input[type=checkbox] {
@@ -150,6 +153,7 @@
     padding-left: 20px;
     position: relative;
     cursor: pointer;
+    min-height: 18px;
 }
 
 .allow_input-box span::before {
@@ -161,14 +165,20 @@
     top: 1px;
     left: 0;
     border-radius: 3px;
+    transition: 0.3s;
+}
+
+.allow_input-box input[type=checkbox]:checked + span::before {
+    background-color: var(--primary);
+    border-color: var(--primary)
 }
 
 .allow_input-box span::after {
     content: "";
     width: 9px;
     height: 6px;
-    border-bottom: 2px solid var(--primary);
-    border-left: 2px solid var(--primary);
+    border-bottom: 2px solid #ffffff;
+    border-left: 2px solid #ffffff;
     position: absolute;
     top: 4px;
     left: 3px;
@@ -846,6 +856,18 @@
     margin-top: 12px;
 }
 
+.form_row {
+    display: flex;
+    align-items: flex-start;
+}
+
+.form_row-inner {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    padding-left: 6px;
+}
+
 .add_bonus {
     display: flex;
     flex-direction: column;
@@ -878,4 +900,34 @@
 .sale_box span {
     display: block;
     margin-left: 6px;
+}
+
+.sub_item-text {
+    margin: 8px 0 6px;
+}
+
+.sub_item-text:nth-child(1) {
+    margin-top: 0;
+}
+
+.select_picture.add_consultant-photo {
+    margin: 0;
+    width: 60px;
+    height: 60px;
+}
+
+.form_row-inner hr {
+    border-bottom: 1px solid var(--border-color);
+    width: 100%;
+    margin: 14px 0;
+    display: block;
+}
+
+.consultant_list li + li {
+    margin-top: 8px;
+}
+
+.consultant_list .sub_item-text {
+    display: block;
+    margin-bottom: 6px;
 }
